--- a/index.html
+++ b/index.html
@@ -72,15 +72,15 @@
                         </button>
                     </div>
                     <div
-                        class="flex mt-10 border-2 border-transparent rounded-lg w-95 text-center p-2 bg-orange-500 mx-auto md:mx-0 ">
-                        <div class="mr-5">
+                        class="flex mt-10 border-2 border-transparent rounded-lg w-88 text-center p-2 bg-orange-500 mx-auto md:mx-0 ">
+                        <div class="mr-1">
                             5+<br>Experiences
                         </div>
-                        <div class="h-15 w-px bg-gray-300 mr-2"></div>
-                        <div class="mr-5">
+                        <div class="h-15 w-px bg-gray-300 mr-1"></div>
+                        <div class="mr-2">
                             20+<br>Projects Done
                         </div>
-                        <div class="h-15 w-px bg-gray-300 mr-2"></div>
+                        <div class="h-15 w-px bg-gray-300 mr-1"></div>
                         <div class="">
                             80+<br>Happy Clients
                         </div>
@@ -185,7 +185,7 @@
 
             <div class="flex flex-col md:flex-row justify-center">
                 <!-- Figma -->
-                <div class="flex flex-row md:flex-row justify-center gap-15 mt-15">
+                <div class="flex flex-row md:flex-row justify-center gap-10 mt-15">
                     <div>
                         <div class="">
                             <a href="../html/login.html"><ion-icon pt-3 name="logo-figma"
@@ -210,7 +210,7 @@
                                     class="flex p-1 text-4xl border-5 border-orange-500 w-7 rounded-full"></ion-icon></a>
                         </div>
                         <div class="text-orange-600">85%</div>
-                        <div>Adobe Photoshop</div>
+                        <div>Adobe P-shop</div>
                     </div>
                 </div>
 
@@ -240,8 +240,8 @@
 
 
         <!-- Portfolio Page -->
-        <div class="container mx-auto">
-            <h1 class="text-white text-4xl font-bold text-center mb-10">Portfolio</h1>
+        <div class="container mx-auto ">
+            <h1 class="text-black text-4xl font-bold text-center mt-20 mb-10">Portfolio</h1>
 
             <div id="filter-buttons" class="flex justify-center flex-wrap gap-4 mb-16">
                 <button data-filter="all"
