--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
                 <div class="project-item" data-category="all website mobile">
                     <div class="bg-[#282828] p-4 rounded-lg shadow-lg border border-gray-700">
                         <div class="h-64 bg-cover bg-center rounded-md"
-                            style="background-image: url('assets\ 2/screenshot 1.png');"></div>
+                            style="background-image: url('session 15/assets 2/Emeka_Mug-removebg-preview.png');"></div>
                         <p class="text-white text-lg mt-3">Number_Identifier</p>
                         <p class="text-gray-400 text-sm">Categories: Website, Mobile</p>
                     </div>
