--- a/index.html
+++ b/index.html
@@ -20,14 +20,15 @@
         <header class="bg-orange-600">
             <nav class="flex justify-between items-center bg-orange-500 items-center px-3 py-6">
                 <logo>
-                    <img src="assets 2/Emeka_Mug-removebg-preview.png" width="40px" height="50px">
+                    <img src="assets/Emeka_Mug-removebg-preview.png" width="40px" height="50px">
                 </logo>
                 <div class="flex text-white" id="html">
                     <a href="#homepage" class="hover:bg-blue-300 rounded-sm px-1 transition hidden md:flex">Home</a>
                     <a href="#services" class="hover:bg-blue-300 rounded-sm px-1 transition">Services</a>
                     <a href="#aboutpage" class="hover:bg-blue-300 rounded-sm px-1 transition hidden md:flex">About
                         me</a>
-                    <a href="mailto:okolochukwuemeka00@gmail.com" class="hover:bg-blue-300 rounded-sm px-1 transition">Contact me</a>
+                    <a href="mailto:okolochukwuemeka00@gmail.com"
+                        class="hover:bg-blue-300 rounded-sm px-1 transition">Contact me</a>
                 </div>
                 <button class="bg-white p-1 pl-5 pr-5 w-30 rounded-sm mr-2 hover:w-35 hover:bg-blue-300"><a
                         href="mailto:okolochukwuemeka00@gmail.com?subject=Hello Emeka am interested in discussing project. Please contact me.">Hire
@@ -50,15 +51,15 @@
 
                 </div>
                 <div class="flex justify-center md:justify-start">
-                    <div class=" flex flex-row justify-center border-2 mb-5 gap-1 rounded-lg w-1/3 p-3 bg-blue-300 ">
+                    <div class=" flex flex-row justify-center border-2 mb-5 gap-1 rounded-lg w-1/2 p-3 bg-blue-300 ">
                         <a href="https://www.instagram.com/emeka_okolo1?igsh=ZHc3bWFuaXNjbzRqx"
-                            class="mr-3 hover:text-orange-600"><ion-icon name="logo-instagram"></ion-icon></a>
+                            class="mr-3 hover:text-orange-600 px-2"><ion-icon name="logo-instagram"></ion-icon></a>
                         <a href="https://x.com/Shantel75988?t=1HmewxHGOcGpE0tbRtIT2Q&s=09"
-                            class="mr-3 hover:text-orange-600"><ion-icon name="logo-twitter"></ion-icon></a>
+                            class="mr-3 hover:text-orange-600 px-2"><ion-icon name="logo-twitter"></ion-icon></a>
                         <a href="https://www.facebook.com/profile.php?id=61583281805665"
-                            class="mr-3 hover:text-orange-600"><ion-icon name="logo-facebook"></ion-icon></a>
-                        <a href="https://vm.tiktok.com/ZSHc9ELhvdFGE-YPL1H/" class="hover:text-orange-600"><ion-icon
-                                name="logo-tiktok"></ion-icon></a>
+                            class="mr-3 hover:text-orange-600 px-2"><ion-icon name="logo-facebook"></ion-icon></a>
+                        <a href="https://vm.tiktok.com/ZSHc9ELhvdFGE-YPL1H/"
+                            class="hover:text-orange-600 px-3"><ion-icon name="logo-tiktok"></ion-icon></a>
                     </div>
                 </div>
                 <div class="flex flex-col justify-center">
@@ -91,15 +92,15 @@
             <!-- Home Images -->
             <div class="">
                 <div class="flex justify-center md:justify-start">
-                    <img src="assets 2/orange_circle_2-removebg-preview.png" class="absolute md:top-80 h-80 top-166 ">
+                    <img src="assets/orange_circle_2-removebg-preview.png" class="absolute md:top-80 h-80 top-166 ">
                 </div>
 
                 <div class="flex">
                     <div class="flex item-center">
-                        <img src="assets 2/WhatsApp_Image_2025-10-13_at_15.23.33_3bf95d4c-removebg-preview.png"
+                        <img src="assets/WhatsApp_Image_2025-10-13_at_15.23.33_3bf95d4c-removebg-preview.png"
                             class="relative top-20 md:top-22 md:h-110 md:left-0 left-3">
                     </div>
-                    <img src="assets 2/IMG_20251031_235429.png"
+                    <img src="assets/IMG_20251031_235429.png"
                         class="relative top-70 h-60 opacity-50 left-20 hidden md:block">
                 </div>
 
@@ -121,7 +122,8 @@
                     </div>
                 </div>
                 <!-- services 2 -->
-                <div class="flex-row max-w-lg mt-15 border-2 rounded-lg border-orange-500 m-2 p-5 md:max-w-lg hover:shadow-lg">
+                <div
+                    class="flex-row max-w-lg mt-15 border-2 rounded-lg border-orange-500 m-2 p-5 md:max-w-lg hover:shadow-lg">
                     <div class="text-center text-4xl"><ion-icon name="color-palette-outline"></ion-icon></div>
                     <div class="text-center font-bold">Graphic Design</div>
                     <div class="text-center">I Create Visually Stunning Graphics That Capture Attention And Build Your
@@ -129,7 +131,8 @@
                     </div>
                 </div>
                 <!-- services 3 -->
-                <div class="flex-row max-w-lg mt-15 border-2 rounded-lg border-orange-500 m-2 p-5 md:max-w-lg hover:shadow-lg">
+                <div
+                    class="flex-row max-w-lg mt-15 border-2 rounded-lg border-orange-500 m-2 p-5 md:max-w-lg hover:shadow-lg">
                     <div class="text-center text-4xl"><ion-icon name="logo-buffer"></ion-icon></div>
                     <div class="text-center font-bold">Web Creation</div>
                     <div class="text-center">I Build High-Performance Websites Engineered For Engagement And Growth.
@@ -138,7 +141,8 @@
             </div>
             <div class="flex flex-col justify-center md:flex-row">
                 <!-- services 4 -->
-                <div class="flex-row max-w-lg mt-10 border-2 rounded-lg md:max-w-lg border-orange-500 m-2 p-5 hover:shadow-lg">
+                <div
+                    class="flex-row max-w-lg mt-10 border-2 rounded-lg md:max-w-lg border-orange-500 m-2 p-5 hover:shadow-lg">
                     <div class="text-center text-4xl"><ion-icon name="videocam-off-outline"></ion-icon></div>
                     <div class="text-center font-bold">V-log</div>
                     <div class="text-center">I Can Develop Professional Videos That Elevate Your Brand And Grow Your
@@ -163,20 +167,25 @@
             </div>
         </div>
         <!-- About Page -->
-        <div id="aboutpage" >
+        <div id="aboutpage">
             <div class="mt-30 font-bold text-center text-2xl mb-10">About Me</div>
             <div class="flex justify-center gap-0 md:gap-30 mx-0">
                 <div>
 
                     <div>
-                        <img src="assets 2/orange_circle_2-removebg-preview.png"
+                        <img src="assets/orange_circle_2-removebg-preview.png"
                             class="absolute top-375 h-70 hidden md:block ">
                     </div>
-                    <img src="assets 2/WhatsApp_Image_2025-10-13_at_15.23.33_3bf95d4c-removebg-preview.png"
+                    <img src="assets/WhatsApp_Image_2025-10-13_at_15.23.33_3bf95d4c-removebg-preview.png"
                         class="relative top-3 left-0 h-90 hidden md:block">
                 </div>
                 <div class="max-w-60 md:max-w-2xs w-3xl mt-10 md:mt-20 text-center">
-                 My name is Emeka Okolo, From Enugu State Nigeria. I am  dedicated to crafting beautiful, inutiative digital experiences and engineered for users engagement and bussiness growth. With 5+ years of Professional experience, I have succesfully completed over 20 diverse projects and served over 80+ happy clients. I offer a comprehensive range of creative and technical services such as App and web Design, Visual Branding,Content Strategy such as proffesional video logs(V-log) and SEO-optimized Blog  
+                    My name is Emeka Okolo, From Enugu State Nigeria. I am dedicated to crafting beautiful, inutiative
+                    digital experiences and engineered for users engagement and bussiness growth. With 5+ years of
+                    Professional experience, I have succesfully completed over 20 diverse projects and served over 80+
+                    happy clients. I offer a comprehensive range of creative and technical services such as App and web
+                    Design, Visual Branding,Content Strategy such as proffesional video logs(V-log) and SEO-optimized
+                    Blog
                 </div>
             </div>
 
@@ -271,7 +280,7 @@
                 <div class="project-item" data-category="all website mobile">
                     <div class="bg-[#282828] p-4 rounded-lg shadow-lg border border-gray-700">
                         <div class="h-64 bg-cover bg-center rounded-md"
-                            style="background-image: url('session 15/assets 2/Emeka_Mug-removebg-preview.png');"></div>
+                            style="background-image: url('assets/Screenshot\ 1.png');"></div>
                         <p class="text-white text-lg mt-3">Number_Identifier</p>
                         <p class="text-gray-400 text-sm">Categories: Website, Mobile</p>
                     </div>
@@ -280,7 +289,7 @@
                 <div class="project-item" data-category="all website">
                     <div class="bg-[#282828] p-4 rounded-lg shadow-lg border border-gray-700">
                         <div class="h-64 bg-cover bg-center rounded-md"
-                            style="background-image: url('assets 2/Screenshot_2025-10-30-23-55-19-879_com.android.chrome.jpg');">
+                            style="background-image: url('assets/Screenshot_2025-10-30-23-55-19-879_com.android.chrome.jpg');">
                         </div>
                         <p class="text-white text-lg mt-3">Portfolio</p>
                         <p class="text-gray-400 text-sm">Categories: Website</p>
@@ -290,7 +299,7 @@
                 <div class="project-item" data-category="all branding desktop">
                     <div class="bg-[#282828] p-4 rounded-lg shadow-lg border border-gray-700">
                         <div class="h-64 bg-cover bg-center rounded-md"
-                            style="background-image: url('assets\ 2/screenshot 2.png');">
+                            style="background-image: url('assets/screenshot 2.png');">
                         </div>
                         <p class="text-white text-lg mt-3">Alighnment</p>
                         <p class="text-gray-400 text-sm">Categories: Branding, Desktop</p>
@@ -300,7 +309,7 @@
                 <div class="project-item" data-category="all mobile">
                     <div class="bg-[#282828] p-4 rounded-lg shadow-lg border border-gray-700">
                         <div class="h-64 bg-cover bg-center rounded-md"
-                            style="background-image: url('assets\ 2/screenshot 4.png');"></div>
+                            style="background-image: url('assets/screenshot 4.png');"></div>
                         <p class="text-white text-lg mt-3">Registration</p>
                         <p class="text-gray-400 text-sm">Categories: Mobile</p>
                     </div>
@@ -308,7 +317,7 @@
                 <div class="project-item" data-category="all branding">
                     <div class="bg-[#282828] p-4 rounded-lg shadow-lg border border-gray-700">
                         <div class="h-64 bg-cover bg-center rounded-md"
-                            style="background-image: url('assets\ 2/screenshot 5.png');">
+                            style="background-image: url('assets/screenshot 5.png');">
                         </div>
                         <p class="text-white text-lg mt-3">Google-Project</p>
                         <p class="text-gray-400 text-sm">Categories: Branding</p>
@@ -317,7 +326,7 @@
                 <div class="project-item" data-category="all website desktop">
                     <div class="bg-[#282828] p-4 rounded-lg shadow-lg border border-gray-700">
                         <div class="h-64 bg-cover bg-center rounded-md"
-                            style="background-image: url('assets\ 2/screenshot 6.png');">
+                            style="background-image: url('assets/screenshot 6.png');">
                         </div>
                         <p class="text-white text-lg mt-3">Mobile_App</p>
                         <p class="text-gray-400 text-sm">Categories: Website, Desktop</p>
@@ -379,7 +388,7 @@
         <!--Footer Page-->
         <div class="bg-orange-600 text-white">
             <div class="flex justify-center mt-">
-                <img src="assets 2/Emeka_Mug-removebg-preview.png" class="w-30 mt-5">
+                <img src="assets/Emeka_Mug-removebg-preview.png" class="w-30 mt-5">
             </div>
             <div class="flex justify-center gap-10">
                 <a href="#homepage">Home</a>
@@ -392,14 +401,16 @@
                         name="logo-instagram"></ion-icon></a>
                 <a href="https://x.com/Shantel75988?t=1HmewxHGOcGpE0tbRtIT2Q&s=09" class="mr-3"><ion-icon
                         name="logo-twitter"></ion-icon></a>
-                <a href="https://www.facebook.com/profile.php?id=61583281805665" class="mr-3"><ion-icon name="logo-facebook"></ion-icon></a>
+                <a href="https://www.facebook.com/profile.php?id=61583281805665" class="mr-3"><ion-icon
+                        name="logo-facebook"></ion-icon></a>
                 <a href="https://vm.tiktok.com/ZSHc9ELhvdFGE-YPL1H/"><ion-icon name="logo-tiktok"></ion-icon></a>
             </div>
             <div class="flex gap-10 justify-center m">
-                <div class="flex items-center gap-1"><ion-icon name="mail-unread-outline"></ion-icon>okolochukwuemeka00@gmail.com</div>
-                <div class="flex items-center gap-1"><ion-icon name="call-outline"></ion-icon> +234 916 117 5988</div>
-            </div>
-        </div>
+                <div class="flex items-center gap-1"><ion-icon
+                        name="mail-unread-outline"></ion-icon>okolochukwuemeka00@gmail.com</div>
+                <div>
+                    <a href="https://Wa.me/+2349161175988"><ion-icon name="logo-whatsapp"></ion-icon></a>
+                </div>
 
 
     </main>
